--- a/README
+++ b/README
@@ -1,12 +1,9 @@
 #####################
 Author: LRP
-Date: 28-11-2016
-Description: REAME the EMIR-ETC project
+Date: 23-10-2018
+Description: README for the EMIR-ETC project
 #####################
 
-... description to come!
+The EMIR Exposure Time Calculator (ETC) simulates observations with GTC-EMIR for Spectroscopic and Photometric modes. 
 
-TODO -- features to include in updates of the ETC 
--- Specifiy what seeing band we are talking about
--- Deal with extended objects in a more complete way
 
